--- a/flask_app/templates/myplacedit.html
+++ b/flask_app/templates/myplacedit.html
@@ -47,7 +47,7 @@
                     <select name="vibe" class="form-select" value="{{place.vibe}}">
                         <option value="Chill">Chill</option>
                         <option value="Lively">Lively</option>
-                        <option value="Party">Party Time</option>
+                        <option value="Party Time">Party Time</option>
                     </select>
                     <p><label for="price">Price</label></p>
                     <select name="price" class="form-select" value="{{place.price}}">
