--- a/flask_app/templates/viewplaces.html
+++ b/flask_app/templates/viewplaces.html
@@ -20,7 +20,7 @@
             <li><h5><a href="/logout"><button class="btn btn-outline-danger btn-sm">Log Out</button></a> </h5></li>
         </ul>
     </nav>
-    <div class="mx-auto card text-center" style="width: 28rem; height: 36rem; background-color: rgb(255, 117, 143); margin-top: 5px;">
+    <div class="mx-auto card text-center" style="width: 28rem; background-color: rgb(255, 117, 143); margin-top: 5px;">
         <div class="card-title">
             <h1>{{place.name}}</h1> <h5>({{place.city}})</h5>
             <div>
