--- a/flask_app/templates/placereview.html
+++ b/flask_app/templates/placereview.html
@@ -22,7 +22,7 @@
         </ul>
     </nav>
     <div class="container"> 
-        <div class="mx-auto card text-center" style="width: 28rem; height: 36rem; background-color: rgb(249, 190, 199); margin-top: 5px;">
+        <div class="mx-auto card text-center" style="width: 28rem; background-color: rgb(242, 174, 184); margin-top: 5px;">
                 <div class="card_title"><h1></h1></div>
                 <div class="card-body">      
                 {% with messages = get_flashed_messages() %}  
