--- a/flask_app/templates/visiting.html
+++ b/flask_app/templates/visiting.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="{{url_for('static', filename='/css/style.css')}}">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,100;1,300&family=Shrikhand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz,wght@6..96,600;6..96,700;6..96,900&family=Bungee+Outline&family=Bungee+Shade&family=Cantata+One&family=Limelight&family=Roboto:ital,wght@0,300;0,400;1,100;1,300&family=Sansita:wght@900&family=Shrikhand&family=Tenor+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bigshot+One&family=Bodoni+Moda:opsz,wght@6..96,600;6..96,700;6..96,900&family=Bungee+Outline&family=Bungee+Shade&family=Cantata+One&family=Limelight&family=Merriweather+Sans:ital,wght@1,800&family=Newsreader:opsz,wght@6..72,300&family=Roboto:ital,wght@0,300;0,400;1,100;1,300&family=Sansita:wght@900&family=Shrikhand&family=Tenor+Sans&display=swap" rel="stylesheet">
     <title>Visiting</title>
 </head>
 <body>
@@ -20,15 +21,14 @@
         </ul>
     </nav>
     <div class="container">
-        <div class="mx-auto card text-center" style="width: 30rem; height: 36rem; background-color: rgb(235, 191, 129); margin-top: 5px;">
+        <div class="mx-auto card text-center" style="width: 30rem; height: 15rem; background-color: rgb(235, 191, 129); margin-top: 5px;">
             <h1 class="card-header">Where are you going {{ user.first_name }}? &#128640</h1>
             <div class="card-body">
                 <form action="/places/goplaces">
-                    <label for="places">City:</label>
+                    <label for="places"><p>City:</p></label>
                     <input type="text" name="city">
-                    <div>
-                        <h5><button type="submit">Find places</button></h5>
-                    </div>
+                    <button type="submit"><h5>Find places</h5></button>
+                    
                     
                 </form>                
             </div>           
