--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -7,16 +7,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="{{url_for('static', filename='/css/style.css')}}">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,100;1,300&family=Shrikhand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz,wght@6..96,600;6..96,700;6..96,900&family=Bungee+Outline&family=Bungee+Shade&family=Cantata+One&family=Limelight&family=Roboto:ital,wght@0,300;0,400;1,100;1,300&family=Sansita:wght@900&family=Shrikhand&family=Tenor+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bigshot+One&family=Bodoni+Moda:opsz,wght@6..96,600;6..96,700;6..96,900&family=Bungee+Outline&family=Bungee+Shade&family=Cantata+One&family=Limelight&family=Merriweather+Sans:ital,wght@1,800&family=Newsreader:opsz,wght@6..72,300&family=Roboto:ital,wght@0,300;0,400;1,100;1,300&family=Sansita:wght@900&family=Shrikhand&family=Tenor+Sans&display=swap" rel="stylesheet">
     <title>Login</title>
     
 </head>
 <body background="https://images.unsplash.com/photo-1479044769763-c28e05b5baa5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80">
     <div class="container px-4, mt-5,">
-        <h1 class="text-center text-white" >Locals</h1>
+        <h1 class="text-center text-white" style="font-size: 45px;">Locals</h1>
         <div class="row gx-5 bg-dark.bg-gradient">
             <div class="col">
                 <form action="/user/create" method="post">
-                    <div class="p-3 bg-transparent text-light"><h2 class="text-center">Registration</h2>
+                    <div class="p-3 bg-transparent text-light"><h2 class="text-center" style="font-size: 30px;"><p>Registration</p></h2>
                             <div class="mb-3">
                                 <label for="first_name" class="form-label">First Name</label>
                                 <input type="name" class="form-control" name="first_name" aria-describedby="first_name" style="width: 250px;">
@@ -38,9 +40,10 @@
                                 <label for="confirm" class="form-label">Confirm Password</label>
                                 <input type="password" class="form-control" name="confirm" style="width: 250px;">
                             </div>
-                            <button type="submit" class="btn btn-primary">Submit</button>                          
+                            <h5><button type="submit" class="btn btn-primary">Submit</button></h5>
+
                     </div>      
-                </form>    
+                <form>    
                     {% with messages = get_flashed_messages() %}  
                         {% if messages %}                           
                             {% for message in messages %}           
@@ -50,7 +53,7 @@
                     {% endwith %}          
             </div>
             <div class="col">
-                <div class="p-3 bg-transparent text-light"><h2 class="text-center">Login</h2>
+                <div class="p-3 bg-transparent text-light" ><h2 class="text-center" style="font-size: 30px;"><p>Login</p></h2>
                     <form action="/login" method="post">
                         <div class="mb-3">
                             <label for="email" class="form-label">Email address</label>
@@ -60,7 +63,7 @@
                             <label for="password" class="form-label">Password</label>
                             <input type="password" class="form-control" name="password" style="width: 250px;">
                         </div>  
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <h5><button type="submit" class="btn btn-primary">Submit</button></h5>
                     </form>
                     {% with messages = get_flashed_messages(category_filter=['login']) %}  
                         {% if messages %}                           
