--- a/flask_app/static/css/style.css
+++ b/flask_app/static/css/style.css
@@ -1,5 +1,4 @@
 h1,h3{
-    /* font-family: 'Roboto', sans-serif; */
     font-family: 'Shrikhand', cursive;
 
 }
@@ -32,4 +31,8 @@ p{
 
 .navbar-brand{
     font-size: larger;
+}
+
+.alert{
+    color: aliceblue;
 }
