--- a/flask_app/templates/viewplaces.html
+++ b/flask_app/templates/viewplaces.html
@@ -28,6 +28,10 @@
                 <p>Description: {{place.description}}</p>
                 <p>Price: {{place.price}}</p>
             </div>
+            {% for photo in results %}
+            
+            <!-- <img src="{{photo[]}}" > -->
+            {% endfor %}
             <div class="card-body">
             </div>
         </div>
