--- a/flask_app/templates/local.html
+++ b/flask_app/templates/local.html
@@ -34,7 +34,7 @@
                     <div class="row">
                         <div class="col">
                             <label for="city"><p>City</p></label>
-                            <input type="text"  name="city" class="form-control" placeholder="Muncie">
+                            <input type="text"  name="city" class="form-control" placeholder="New York">
                         </div>
                         <div class="col">
                             <label for="state"><p>State</p></label>
@@ -101,7 +101,7 @@
                     <label for="type"><p>Type</p></label>
                     <select name="type" class="form-select">
                         <option value="">-- Select Type --</option>
-                        <option value="Food">Food &#127789</option>
+                        <option value="Food">Food &#127860</option>
                         <option value="Drinks">Drinks &#127864</option>
                     </select>
                     
@@ -109,15 +109,15 @@
                     <select name="vibe" class="form-select">
                         <option value="">-- Select Vibe --</option>
                         <option value="Chill">Chill &#9749</option>
-                        <option value="Lively">Lively</option>
-                        <option value="Party Time">Party Time &#127870;</option>
+                        <option value="Lively">Lively &#127870 </option>
+                        <option value="Party Time">Party Time &#128131 </option>
                     </select>
 
 
                     <p><label for="price">Price</label></p>
                     <select name="price" class="form-select">
                         <option value="">-- Select Price --</option>
-                        <option value="$ &#128181"> &#128181</option>
+                        <option value="$"> &#128181</option>
                         <option value="$$"> &#128181&#128181</option>
                         <option value="$$$"> &#128181&#128181&#128181</option>
                     </select>
