--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -21,11 +21,11 @@
                     <div class="p-3 bg-transparent text-light"><h2 class="text-center" style="font-size: 30px;"><p>Registration</p></h2>
                             <div class="mb-3">
                                 <label for="first_name" class="form-label">First Name</label>
-                                <input type="name" class="form-control" name="first_name" aria-describedby="first_name" style="width: 250px;">
+                                <input type="name" class="form-control" name="first_name" aria-describedby="first_name" style="width: 290px;">
                             </div>
                             <div class="mb-3">
                                 <label for="last_name" class="form-label">Last Name</label>
-                                <input type="name" class="form-control" name="last_name" aria-describedby="last_name" style="width: 250px;">
+                                <input type="name" class="form-control" name="last_name" aria-describedby="last_name" style="width: 290px;">
                             </div>
                             <div class="mb-3">
                                 <label for="email" class="form-label">Email address</label>
@@ -43,7 +43,7 @@
                             <h5><button type="submit" class="btn btn-primary">Submit</button></h5>
 
                     </div>      
-                <form>    
+                </form>    
                     {% with messages = get_flashed_messages() %}  
                         {% if messages %}                           
                             {% for message in messages %}           
@@ -57,7 +57,7 @@
                     <form action="/login" method="post">
                         <div class="mb-3">
                             <label for="email" class="form-label">Email address</label>
-                            <input type="text" class="form-control" name="email" aria-describedby="emailHelp" style="width: 250px;">
+                            <input type="text" class="form-control" name="email" aria-describedby="emailHelp" style="width: 290px;">
                         </div>
                         <div class="mb-3">
                             <label for="password" class="form-label">Password</label>
@@ -65,6 +65,7 @@
                         </div>  
                         <h5><button type="submit" class="btn btn-primary">Submit</button></h5>
                     </form>
+                    
                     {% with messages = get_flashed_messages(category_filter=['login']) %}  
                         {% if messages %}                           
                             {% for message in messages %}           
@@ -74,8 +75,8 @@
                     {% endwith %} 
                 </div> 
             </div>
+            
         </div>    
     </div>   
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
